Laboratorio terminado (lab04)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Presentacion Personal</title>
     <style>
         table {
@@ -12,6 +12,7 @@
         td, th {
           padding: 0;
         }
+        
     </style>
 </head>
 <body>
@@ -36,7 +37,7 @@
             </th>
             <th>
                 <div class="contenedor">
-                    <img src="foto.jpg" width="185px" style="border-radius: 5px red;">
+                    <img src="Imagenes/foto.jpg" width="185px" style="border-radius: 5px red;">
                     <h4 class="texto" style="border: 4px solid red; padding: 20px; margin: 0px; padding-left: 10p; padding-top: 95px;"> 
                         Mi nombre es Luis Enrique Huerta Gonzales, tengo 19 años, acabe mi educación en el colegio San Jeronimo,
                         me considero una persona muy sociable, empática y profunda. 
@@ -56,11 +57,11 @@
             <p style="position: absolute ; left: 60px ;margin-top: 220px; font-size: 20px;">Tocar y hacer música<br />Realizar deporte<br />La meditación<br />Tocar piano y violín<br />Leer</p>
             <h3 style="color: red; position: absolute; margin-left: 130px; font-size: 25px;" >Gustos</h3>
             <p style="position: relative; margin-top: 50px; left: 70px; font-size: 19px; margin-top: 60px; ">Me agrada mucho la comida picante<br />Escucho todo tipo de música<br />Ir a conciertos de música clásica<br />Lugares libres</p>
-            <img src="musica.png" alt="" width="90px" style="float: left; margin-left: 100px; margin-top: -340px;">
+            <img src="Imagenes/musica.png" alt="" width="90px" style="float: left; margin-left: 100px; margin-top: -340px;">
         </th>
 
         <th>
-            <img src="image1.png" alt="" width="220px" style="position: absolute; margin-left: -400px; margin-top: 10px; border-radius: 20px;">
+            <img src="Imagenes/image1.png" alt="" width="220px" style="position: absolute; margin-left: -400px; margin-top: 10px; border-radius: 20px;">
             <h1 style="position: absolute; margin-left: -180px; color: lightcoral; padding-top: 1px;">Hola!!</h1>
             <p style="position: absolute; left: 620px; padding: 50px; margin: 30px; line-height: 30px; color: bisque; font-size: 18px; padding-left: 40px; margin-top: 15px; padding-bottom: 130px; border: 5px solid; border-top: 20px; border-bottom: 20px; border-right: 20px;">Se encuentran en mi portafolio, <br> aqui encontraran información <br> básica de lo que <br> me constituye  como <br> también  compartirles mis <br> proyectos  para <br> que me vayan conociendo a profundidad. <br> <br> Espero les guste &#128513; </p>
             <h2 id="subtitulo" style="margin-top: -10px; font-family: Arial, sans-serif;"> Sobre Mi </h2>
@@ -71,11 +72,11 @@
     
     <table>
         <th>
-            <img src="java.png" alt="" width="120px" style="size: 20px;">
-            <img src="python.png" alt="" width="120px">
-            <img src="html.png" alt="" width="120px">
-            <img src="javas.png" alt="" width="120px">
-            <img src="mongo.png" alt="" width="120px">
+            <img src="Imagenes/java.png" alt="" width="120px" style="size: 20px;">
+            <img src="Imagenes/python.png" alt="" width="120px">
+            <img src="Imagenes/html.png" alt="" width="120px">
+            <img src="Imagenes/javas.png" alt="" width="120px">
+            <img src="Imagenes/mongo.png" alt="" width="120px">
         </th>
         <th>
             <h1 id="sub3" style="color: brown; padding-top: 20px;"> Tecnologías y lenguajes de Programación </h1>
@@ -96,8 +97,8 @@
         </th>
         <th>
             <video width="600" height="240" controls style="padding: 50px;">
-                <source src="X2Download.app-TECSUP _ Arequipa.mp4" type="video/mp4">
-                <source src="X2Download.app-TECSUP _ Arequipa.mp4" type="video/webm">
+                <source src="Imagenes/X2Download.app-TECSUP _ Arequipa.mp4" type="video/mp4">
+                <source src="Imagenes/X2Download.app-TECSUP _ Arequipa.mp4" type="video/webm">
                 Tu navegador no soporta la reproducción de videos.
             </video>
         </th>
